// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoliciesTable Pagination and search should be able to move to next and previous pages 1`] = `
<Fragment>
  <PrimaryToolbar
    activeFiltersConfig={
      Object {
        "filters": Array [],
        "onDelete": [Function],
      }
    }
    filterConfig={
      Object {
        "hideLabel": true,
        "items": Array [
          Object {
            "filterValues": Object {
              "onChange": [Function],
              "value": undefined,
            },
            "id": "name",
            "label": "Name",
            "type": "text",
          },
        ],
      }
    }
    pagination={
      Object {
        "dropDirection": "down",
        "itemCount": 13,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
        "page": 2,
        "perPage": 10,
      }
    }
    toggleIsExpanded={[Function]}
  >
    <ToolbarItem>
      <BackgroundLink
        to="/scappolicies/new"
      >
        <Button
          variant="primary"
        >
          Create new policy
        </Button>
      </BackgroundLink>
    </ToolbarItem>
    <ToolbarItem>
      13
       results
    </ToolbarItem>
  </PrimaryToolbar>
  <Table
    actionResolver={[Function]}
    aria-label="policies"
    borders={true}
    canSelectAll={true}
    cells={
      Array [
        Object {
          "title": "Policy name",
        },
        Object {
          "title": "Operating system",
        },
        Object {
          "title": "Systems",
        },
        Object {
          "title": "Business objective",
        },
        Object {
          "title": "Compliance threshold",
        },
      ]
    }
    className="compliance-policies-table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isStickyHeader={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "original": "Standard System Security Profile for Red Hat Enterprise Linux 7",
              "title": <Link
                to="/scappolicies/4c27fe09-9a7f-437c-b38b-e42272d9ccf0"
              >
                Standard System Security Profile for Red Hat Enterprise Linux 7
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "4c27fe09-9a7f-437c-b38b-e42272d9ccf0",
        },
        Object {
          "cells": Array [
            Object {
              "original": "DISA STIG for Red Hat Enterprise Linux 7",
              "title": <Link
                to="/scappolicies/9b034440-e3dd-4c19-8f2c-ca75e813d57d"
              >
                DISA STIG for Red Hat Enterprise Linux 7
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "9b034440-e3dd-4c19-8f2c-ca75e813d57d",
        },
        Object {
          "cells": Array [
            Object {
              "original": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 72",
              "title": <Link
                to="/scappolicies/19921ca4-8526-4651-8876-3c8587e8e125"
              >
                PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 72
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "19921ca4-8526-4651-8876-3c8587e8e125",
        },
      ]
    }
    selectVariant="checkbox"
    variant={null}
  >
    <TableHeader />
    <Component />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      className=""
      defaultToFullPage={false}
      dropDirection="up"
      firstPage={1}
      isCompact={false}
      isDisabled={false}
      itemCount={13}
      itemsEnd={null}
      itemsStart={null}
      offset={0}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      ouiaSafe={true}
      page={2}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "",
          "itemsPerPage": "Items per page",
          "optionsToggle": "Items per page",
          "page": "",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      toggleTemplate={[Function]}
      variant="bottom"
      widgetId="pagination-options-menu"
    />
  </TableToolbar>
</Fragment>
`;

exports[`PoliciesTable Pagination and search should be able to move to next and previous pages 2`] = `
<Fragment>
  <PrimaryToolbar
    activeFiltersConfig={
      Object {
        "filters": Array [],
        "onDelete": [Function],
      }
    }
    filterConfig={
      Object {
        "hideLabel": true,
        "items": Array [
          Object {
            "filterValues": Object {
              "onChange": [Function],
              "value": undefined,
            },
            "id": "name",
            "label": "Name",
            "type": "text",
          },
        ],
      }
    }
    pagination={
      Object {
        "dropDirection": "down",
        "itemCount": 13,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
        "page": 1,
        "perPage": 10,
      }
    }
    toggleIsExpanded={[Function]}
  >
    <ToolbarItem>
      <BackgroundLink
        to="/scappolicies/new"
      >
        <Button
          variant="primary"
        >
          Create new policy
        </Button>
      </BackgroundLink>
    </ToolbarItem>
    <ToolbarItem>
      13
       results
    </ToolbarItem>
  </PrimaryToolbar>
  <Table
    actionResolver={[Function]}
    aria-label="policies"
    borders={true}
    canSelectAll={true}
    cells={
      Array [
        Object {
          "title": "Policy name",
        },
        Object {
          "title": "Operating system",
        },
        Object {
          "title": "Systems",
        },
        Object {
          "title": "Business objective",
        },
        Object {
          "title": "Compliance threshold",
        },
      ]
    }
    className="compliance-policies-table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isStickyHeader={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "original": "United States Government Configuration Baseline23",
              "title": <Link
                to="/scappolicies/b71376fd-015e-4209-99af-4543e82e5dc5"
              >
                United States Government Configuration Baseline23
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "b71376fd-015e-4209-99af-4543e82e5dc5",
        },
        Object {
          "cells": Array [
            Object {
              "original": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 73",
              "title": <Link
                to="/scappolicies/719999b6-d230-4ba5-8dba-7ab3dc6561e0"
              >
                PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 73
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "67%",
          ],
          "policyId": "719999b6-d230-4ba5-8dba-7ab3dc6561e0",
        },
        Object {
          "cells": Array [
            Object {
              "original": "United States Government Configuration Baseline2",
              "title": <Link
                to="/scappolicies/dae0487d-3201-4ee0-af5f-b94cde2af818"
              >
                United States Government Configuration Baseline2
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "dae0487d-3201-4ee0-af5f-b94cde2af818",
        },
        Object {
          "cells": Array [
            Object {
              "original": "C2S for Red Hat Enterprise Linux 7",
              "title": <Link
                to="/scappolicies/20a9d997-62a6-40cc-a5f3-19d466eb975e"
              >
                C2S for Red Hat Enterprise Linux 7
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "69.5%",
          ],
          "policyId": "20a9d997-62a6-40cc-a5f3-19d466eb975e",
        },
        Object {
          "cells": Array [
            Object {
              "original": "Criminal Justice Information Services (CJIS) Security Policy",
              "title": <Link
                to="/scappolicies/6d345bd2-d597-4df8-9bcf-71c41155b42c"
              >
                Criminal Justice Information Services (CJIS) Security Policy
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "6d345bd2-d597-4df8-9bcf-71c41155b42c",
        },
        Object {
          "cells": Array [
            Object {
              "original": "Unclassified Information in Non-federal Information Systems and Organizations (NIST 800-171)",
              "title": <Link
                to="/scappolicies/c8e15347-9c2b-495d-8e54-503c2f9582b6"
              >
                Unclassified Information in Non-federal Information Systems and Organizations (NIST 800-171)
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "c8e15347-9c2b-495d-8e54-503c2f9582b6",
        },
        Object {
          "cells": Array [
            Object {
              "original": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
              "title": <Link
                to="/scappolicies/3c4823a1-2c16-46ae-b2fe-0cebf5a03931"
              >
                PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "3c4823a1-2c16-46ae-b2fe-0cebf5a03931",
        },
        Object {
          "cells": Array [
            Object {
              "original": "Red Hat Corporate Profile for Certified Cloud Providers (RH CCP)",
              "title": <Link
                to="/scappolicies/f7b7977a-403b-4cd1-ab90-20b6f9a5a359"
              >
                Red Hat Corporate Profile for Certified Cloud Providers (RH CCP)
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "f7b7977a-403b-4cd1-ab90-20b6f9a5a359",
        },
        Object {
          "cells": Array [
            Object {
              "original": "Health Insurance Portability and Accountability Act (HIPAA)",
              "title": <Link
                to="/scappolicies/36abc364-6dc3-4e35-94f4-d10fa77e866e"
              >
                Health Insurance Portability and Accountability Act (HIPAA)
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "36abc364-6dc3-4e35-94f4-d10fa77e866e",
        },
        Object {
          "cells": Array [
            Object {
              "original": "United States Government Configuration Baseline",
              "title": <Link
                to="/scappolicies/d35c8aad-8fc8-49e8-bff0-4d9d3dc8f220"
              >
                United States Government Configuration Baseline
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "d35c8aad-8fc8-49e8-bff0-4d9d3dc8f220",
        },
      ]
    }
    selectVariant="checkbox"
    variant={null}
  >
    <TableHeader />
    <Component />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      className=""
      defaultToFullPage={false}
      dropDirection="up"
      firstPage={1}
      isCompact={false}
      isDisabled={false}
      itemCount={13}
      itemsEnd={null}
      itemsStart={null}
      offset={0}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      ouiaSafe={true}
      page={1}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "",
          "itemsPerPage": "Items per page",
          "optionsToggle": "Items per page",
          "page": "",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      toggleTemplate={[Function]}
      variant="bottom"
      widgetId="pagination-options-menu"
    />
  </TableToolbar>
</Fragment>
`;

exports[`PoliciesTable Pagination and search should show only matching results after searching 1`] = `
<Fragment>
  <PrimaryToolbar
    activeFiltersConfig={
      Object {
        "filters": Array [
          Object {
            "category": "Name",
            "chips": Array [
              Object {
                "name": "CCP",
              },
            ],
          },
        ],
        "onDelete": [Function],
      }
    }
    filterConfig={
      Object {
        "hideLabel": true,
        "items": Array [
          Object {
            "filterValues": Object {
              "onChange": [Function],
              "value": "CCP",
            },
            "id": "name",
            "label": "Name",
            "type": "text",
          },
        ],
      }
    }
    pagination={
      Object {
        "dropDirection": "down",
        "itemCount": 1,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
        "page": 1,
        "perPage": 10,
      }
    }
    toggleIsExpanded={[Function]}
  >
    <ToolbarItem>
      <BackgroundLink
        to="/scappolicies/new"
      >
        <Button
          variant="primary"
        >
          Create new policy
        </Button>
      </BackgroundLink>
    </ToolbarItem>
    <ToolbarItem>
      1
       results
    </ToolbarItem>
  </PrimaryToolbar>
  <Table
    actionResolver={[Function]}
    aria-label="policies"
    borders={true}
    canSelectAll={true}
    cells={
      Array [
        Object {
          "title": "Policy name",
        },
        Object {
          "title": "Operating system",
        },
        Object {
          "title": "Systems",
        },
        Object {
          "title": "Business objective",
        },
        Object {
          "title": "Compliance threshold",
        },
      ]
    }
    className="compliance-policies-table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isStickyHeader={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "original": "Red Hat Corporate Profile for Certified Cloud Providers (RH CCP)",
              "title": <Link
                to="/scappolicies/f7b7977a-403b-4cd1-ab90-20b6f9a5a359"
              >
                Red Hat Corporate Profile for Certified Cloud Providers (RH CCP)
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "f7b7977a-403b-4cd1-ab90-20b6f9a5a359",
        },
      ]
    }
    selectVariant="checkbox"
    variant={null}
  >
    <TableHeader />
    <Component />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      className=""
      defaultToFullPage={false}
      dropDirection="up"
      firstPage={1}
      isCompact={false}
      isDisabled={false}
      itemCount={1}
      itemsEnd={null}
      itemsStart={null}
      offset={0}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      ouiaSafe={true}
      page={1}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "",
          "itemsPerPage": "Items per page",
          "optionsToggle": "Items per page",
          "page": "",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      toggleTemplate={[Function]}
      variant="bottom"
      widgetId="pagination-options-menu"
    />
  </TableToolbar>
</Fragment>
`;

exports[`PoliciesTable expect to render emptystate 1`] = `
<Fragment>
  <PrimaryToolbar
    activeFiltersConfig={
      Object {
        "filters": Array [],
        "onDelete": [Function],
      }
    }
    filterConfig={
      Object {
        "hideLabel": true,
        "items": Array [
          Object {
            "filterValues": Object {
              "onChange": [Function],
              "value": undefined,
            },
            "id": "name",
            "label": "Name",
            "type": "text",
          },
        ],
      }
    }
    pagination={
      Object {
        "dropDirection": "down",
        "itemCount": 0,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
        "page": 1,
        "perPage": 10,
      }
    }
    toggleIsExpanded={[Function]}
  >
    <ToolbarItem>
      <BackgroundLink
        to="/scappolicies/new"
      >
        <Button
          variant="primary"
        >
          Create new policy
        </Button>
      </BackgroundLink>
    </ToolbarItem>
    <ToolbarItem>
      0
       results
    </ToolbarItem>
  </PrimaryToolbar>
  <Table
    actionResolver={false}
    aria-label="policies"
    borders={true}
    canSelectAll={true}
    cells={
      Array [
        Object {
          "title": "Policy name",
        },
        Object {
          "title": "Operating system",
        },
        Object {
          "title": "Systems",
        },
        Object {
          "title": "Business objective",
        },
        Object {
          "title": "Compliance threshold",
        },
      ]
    }
    className="compliance-policies-table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isStickyHeader={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "props": Object {
                "colSpan": 3,
              },
              "title": [Function],
            },
          ],
        },
      ]
    }
    selectVariant="checkbox"
    variant={null}
  >
    <TableHeader />
    <Component />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      className=""
      defaultToFullPage={false}
      dropDirection="up"
      firstPage={1}
      isCompact={false}
      isDisabled={false}
      itemCount={0}
      itemsEnd={null}
      itemsStart={null}
      offset={0}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      ouiaSafe={true}
      page={1}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "",
          "itemsPerPage": "Items per page",
          "optionsToggle": "Items per page",
          "page": "",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      toggleTemplate={[Function]}
      variant="bottom"
      widgetId="pagination-options-menu"
    />
  </TableToolbar>
</Fragment>
`;

exports[`PoliciesTable expect to render without error 1`] = `
<Fragment>
  <PrimaryToolbar
    activeFiltersConfig={
      Object {
        "filters": Array [],
        "onDelete": [Function],
      }
    }
    filterConfig={
      Object {
        "hideLabel": true,
        "items": Array [
          Object {
            "filterValues": Object {
              "onChange": [Function],
              "value": undefined,
            },
            "id": "name",
            "label": "Name",
            "type": "text",
          },
        ],
      }
    }
    pagination={
      Object {
        "dropDirection": "down",
        "itemCount": 13,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
        "page": 1,
        "perPage": 10,
      }
    }
    toggleIsExpanded={[Function]}
  >
    <ToolbarItem>
      <BackgroundLink
        to="/scappolicies/new"
      >
        <Button
          variant="primary"
        >
          Create new policy
        </Button>
      </BackgroundLink>
    </ToolbarItem>
    <ToolbarItem>
      13
       results
    </ToolbarItem>
  </PrimaryToolbar>
  <Table
    actionResolver={[Function]}
    aria-label="policies"
    borders={true}
    canSelectAll={true}
    cells={
      Array [
        Object {
          "title": "Policy name",
        },
        Object {
          "title": "Operating system",
        },
        Object {
          "title": "Systems",
        },
        Object {
          "title": "Business objective",
        },
        Object {
          "title": "Compliance threshold",
        },
      ]
    }
    className="compliance-policies-table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isStickyHeader={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "original": "United States Government Configuration Baseline23",
              "title": <Link
                to="/scappolicies/b71376fd-015e-4209-99af-4543e82e5dc5"
              >
                United States Government Configuration Baseline23
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "b71376fd-015e-4209-99af-4543e82e5dc5",
        },
        Object {
          "cells": Array [
            Object {
              "original": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 73",
              "title": <Link
                to="/scappolicies/719999b6-d230-4ba5-8dba-7ab3dc6561e0"
              >
                PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 73
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "67%",
          ],
          "policyId": "719999b6-d230-4ba5-8dba-7ab3dc6561e0",
        },
        Object {
          "cells": Array [
            Object {
              "original": "United States Government Configuration Baseline2",
              "title": <Link
                to="/scappolicies/dae0487d-3201-4ee0-af5f-b94cde2af818"
              >
                United States Government Configuration Baseline2
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "dae0487d-3201-4ee0-af5f-b94cde2af818",
        },
        Object {
          "cells": Array [
            Object {
              "original": "C2S for Red Hat Enterprise Linux 7",
              "title": <Link
                to="/scappolicies/20a9d997-62a6-40cc-a5f3-19d466eb975e"
              >
                C2S for Red Hat Enterprise Linux 7
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "69.5%",
          ],
          "policyId": "20a9d997-62a6-40cc-a5f3-19d466eb975e",
        },
        Object {
          "cells": Array [
            Object {
              "original": "Criminal Justice Information Services (CJIS) Security Policy",
              "title": <Link
                to="/scappolicies/6d345bd2-d597-4df8-9bcf-71c41155b42c"
              >
                Criminal Justice Information Services (CJIS) Security Policy
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "6d345bd2-d597-4df8-9bcf-71c41155b42c",
        },
        Object {
          "cells": Array [
            Object {
              "original": "Unclassified Information in Non-federal Information Systems and Organizations (NIST 800-171)",
              "title": <Link
                to="/scappolicies/c8e15347-9c2b-495d-8e54-503c2f9582b6"
              >
                Unclassified Information in Non-federal Information Systems and Organizations (NIST 800-171)
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "c8e15347-9c2b-495d-8e54-503c2f9582b6",
        },
        Object {
          "cells": Array [
            Object {
              "original": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
              "title": <Link
                to="/scappolicies/3c4823a1-2c16-46ae-b2fe-0cebf5a03931"
              >
                PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "3c4823a1-2c16-46ae-b2fe-0cebf5a03931",
        },
        Object {
          "cells": Array [
            Object {
              "original": "Red Hat Corporate Profile for Certified Cloud Providers (RH CCP)",
              "title": <Link
                to="/scappolicies/f7b7977a-403b-4cd1-ab90-20b6f9a5a359"
              >
                Red Hat Corporate Profile for Certified Cloud Providers (RH CCP)
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "f7b7977a-403b-4cd1-ab90-20b6f9a5a359",
        },
        Object {
          "cells": Array [
            Object {
              "original": "Health Insurance Portability and Accountability Act (HIPAA)",
              "title": <Link
                to="/scappolicies/36abc364-6dc3-4e35-94f4-d10fa77e866e"
              >
                Health Insurance Portability and Accountability Act (HIPAA)
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "36abc364-6dc3-4e35-94f4-d10fa77e866e",
        },
        Object {
          "cells": Array [
            Object {
              "original": "United States Government Configuration Baseline",
              "title": <Link
                to="/scappolicies/d35c8aad-8fc8-49e8-bff0-4d9d3dc8f220"
              >
                United States Government Configuration Baseline
              </Link>,
            },
            Object {
              "title": <Tooltip
                content={
                  <span>
                    SCAP Security Guide (SSG): 
                    Guide to the Secure Configuration of RHEL 7
                     - 
                    0.1.49
                  </span>
                }
                position="right"
              >
                <span>
                  RHEL 
                  7
                   (SSG 
                  0.1.49
                  )
                </span>
              </Tooltip>,
            },
            Object {
              "title": 10,
            },
            "--",
            "100%",
          ],
          "policyId": "d35c8aad-8fc8-49e8-bff0-4d9d3dc8f220",
        },
      ]
    }
    selectVariant="checkbox"
    variant={null}
  >
    <TableHeader />
    <Component />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      className=""
      defaultToFullPage={false}
      dropDirection="up"
      firstPage={1}
      isCompact={false}
      isDisabled={false}
      itemCount={13}
      itemsEnd={null}
      itemsStart={null}
      offset={0}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      ouiaSafe={true}
      page={1}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "",
          "itemsPerPage": "Items per page",
          "optionsToggle": "Items per page",
          "page": "",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      toggleTemplate={[Function]}
      variant="bottom"
      widgetId="pagination-options-menu"
    />
  </TableToolbar>
</Fragment>
`;
